production/default-services/cassandra-database-rc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
      deployment.kubernetes.io/revision: "1"
  name: cassandra-database
  generation: 1
    labels:
      app: cassandra-database
      version: "2.2"
  namespace: default
spec:
  replicas: 1
  selector:
      matchLabels:
        app: cassandra-database
        version: "2.2"
  strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
  template:
    metadata:
      name: cassandra-database
      labels:        
        app: cassandra-database
        version: "2.2"
      context: cassandra-pv
    spec:
      containers:
      - name: cassandra-database
        image: cassandra:2.2
        imagePullPolicy: IfNotPresent        
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: "/var/lib/cassandra"
          name: cassandra-ebs
        ports:
        - containerPort: 9042
      dnsPolicy: ClusterFirst
        restartPolicy: Always        
        terminationGracePeriodSeconds: 30
      volumes:
      - name: cassandra-ebs
        persistentVolumeClaim:
          claimName: cassandra-pvc
