production/default-services/cassandra-database.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
      deployment.kubernetes.io/revision: "1"
  name: cassandra-database  
  namespace: default
spec:
  replicas: 1
  selector:
      matchLabels:
        app: cassandra-database
        version: "2.2"
  strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
  template:
    metadata:
      name: cassandra-database
      labels:        
        app: cassandra-database
        version: "2.2"    
    spec:
      containers:
      - name: cassandra-database
        image: cassandra:2.2
        imagePullPolicy: IfNotPresent        
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: "/var/lib/cassandra"
          name: cassandra-ebs
        ports:
        - containerPort: 9042      
      volumes:
      - name: cassandra-ebs
        persistentVolumeClaim:
          claimName: cassandra-pvc
      resources:
          requests:
            cpu: 100m
            memory: 256Mi
