production/default-services/citus-application-gateway.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
      deployment.kubernetes.io/revision: "1"
  name: citus-application-gateway
  namespace: default
spec:
  replicas: 1
  selector:
      matchLabels:
        app: citus-application-gateway
        version: "2.2"
  strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
  template:
    metadata:
      name: citus-application-gateway
      labels:        
        app: citus-application-gateway
        version: "2.2"    
    spec:
      containers:
      - name: citus-application-gateway
        image: cuongdd1/citus-application-gateway:kubernetes
        imagePullPolicy: IfNotPresent        
        securityContext:
          privileged: false        
        ports:
        - containerPort: 8000
        - containerPort: 8001
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
