production/default-services/citus-cassandra-rest.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
      deployment.kubernetes.io/revision: "1"
  name: citus-cassandra-rest  
  namespace: default
spec:
  replicas: 1
  selector:
      matchLabels:
        app: citus-cassandra-rest
        version: "latest"
  strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
  template:
    metadata:
      name: citus-cassandra-rest
      labels:        
        app: citus-cassandra-rest
        version: "latest"    
    spec:
      containers:
      - name: citus-cassandra-rest
        image: cuongdd1/citus-cassandra-rest:latest
        imagePullPolicy: IfNotPresent        
        securityContext:
          privileged: false        
        ports:
        - containerPort: 8088
