production/default-services/device-lifecycle-service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
      deployment.kubernetes.io/revision: "1"
  name: device-lifecycle-service
  namespace: default
spec:
  replicas: 1
  selector:
      matchLabels:
        app: device-lifecycle-service
        version: "latest"
  strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
  template:
    metadata:
      name: device-lifecycle-service
      labels:        
        app: device-lifecycle-service
        version: "latest"    
    spec:
      containers:
      - name: device-lifecycle-service
        image: cuongdd1/device-lifecycle-service:latest
        imagePullPolicy: IfNotPresent        
        securityContext:
          privileged: false        
        ports:
        - containerPort: 3000
