production/default-services/citus-application-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:  
  labels:
    app: citus-application-gateway
  name: citus-application-gateway
  namespace: default
spec:  
  ports:
  - name: tcp-8000-8000-api    
    port: 8000
    protocol: TCP
    targetPort: 8000
  - name: tcp-8001-8001-admin    
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: citus-application-gateway
  type: ClusterIP
