production/default-services/citus-application-gateway-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: citus-application-gateway
spec:
  rules:
  - host: apisvr.citus.io
    http:
      paths:
      - path: /
        backend:
          serviceName: citus-application-gateway
          servicePort: 8000
      - path: /admin
        backend:
          serviceName: citus-application-gateway
          servicePort: 8001
